# simplify

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_usuario.sql  002_categoria.sql  003_conta.sql  004_transacao.sql  005_meta_financeira.sql  006_indices.sql  007_trigger.sql
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
