[package]
name = "simplify"
version = "0.1.0"
description = "Simplify - Controle Financeiro Pessoal"
authors = ["Wender Júnior"]
edition = "2021"

[lib]
name = "simplify_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
